bugfix counter bad position on safari

--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ main {
   font-weight: 200;
   align-self: flex-end;
   position: absolute;
-  right: 20px;
+  left: 255px;
 }
 
 ul {
